fix <pre> overflow.

--- a/docs/css/default.css
+++ b/docs/css/default.css
@@ -10,6 +10,10 @@ body {
   /* hyphens: auto; */
 }
 
+pre {
+  overflow-x: auto;
+}
+
 h1 {
   margin: 0;
 }
